2000-02-03  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/cmdline.c (enter_cmdline): Set BUF_DRIVE to -1 before
	running a command to invalidate the cache.
	(run_script): Likewise.
	* stage2/char_io.c (get_cmdline): Set BUF_DRIVE to -1 before the
	completion to invalidate the cache.
	Reported by Jeff Sheinberg <jeffsh@erols.com>.

	* configure.in: Use AC_PATH_TOOL instead of AC_PATH_PROG.
	* stage2/asm.S (chain_stage1): Prepend `*' to the argument for
	ljmp.
	(chain_stage2): Likewise.
	(big_linux_boot): Likewise.
	
2000-01-19  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (--root): Renamed to ...
	(--root-directory): ... this, since "root" is vague.
	* docs/user-ref.texi (Invoking grub-install): Adjusted to the
	change above, and added an example how to use --root-directory.
	* docs/grub-install.8: Regenerated.

	* docs/appendices.texi (FAQ): Added an item about the sucked
	SCSI problem.
	
2000-01-15  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (chainloader_func): If --force is specified
	in ARG, don't check for the signature.
	* docs/tutorial.texi (Chain-loading): Added a caution about some
	defective boot loaders and --force.
	* docs/user-ref.texi (Command-line-specific commands): Added a
	description about --force.
	
2000-01-11  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/prog-ref.texi (LBA mode disk I/O): Added a footnote about
	a buggy BIOS.
	
2000-01-11  OKUJI Yoshinori  <okuji@gnu.org>

	* stage1/stage1.S [!NO_BUGGY_BIOS_IN_THE_WORLD]: Don't check if
	LBA read is supported. Anyway, fallback to the CHS mode if
	fails.
	
2000-01-10  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/bios.c (NO_INT13_FALLBACK): Undefined.
	(get_diskinfo) [!NO_BUGGY_BIOS_IN_THE_WORLD]: Do not check if
	bit 0 in DRP.FLAGS is set, because at least one BIOS does not
	set it correctly. Reported by "Forever shall I be."
	<zinx@linuxfreak.com>.

	* util/grub-install.in: Handle the new options `--root' and
	`--grub-shell'.
	(rootdir): New variable.